more work done on this website. I have a properly fixed top bit and now the recipes page is formatted somewhat. still trying to figure out why the home page and recipes page do not align correctly.

--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,69 @@
 .App {
+
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.Footer {
+  border-top: 1px solid;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Home {
+  padding-top: 8rem;
+  padding-bottom: 2rem;
+}
+
+.Image {
+  height:75%;
+  width: 75%;
+  border-radius: 0.5rem;
+}
+
+.NavBar {
+  text-align: center;
+  border-bottom: solid 1px;
+  padding-bottom: 1rem;
+  width: 100%;
+  z-index: 2;
+  position: fixed;
+  background-color: azure;
 }
 
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.Recipe {
+  text-align: left;
+  padding-top: 10rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.RecipeItem {
+  text-align: center;
+  align-content: center;
+}
+
+
+.Recipes {
+  text-align: center;
+  position: relative;
+  padding-top: 10rem;
+  padding-bottom: 2rem;
+  display: grid;
+  gap: 1rem;
+  width: 100%;
+  place-items: center;
+  align-content: center;
+}
+
+.RecipePane {
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
+  height: minmax();
+  align-content: center;
+  margin-top: 2rem;
+  padding: auto;
+  padding-right: 1rem;
+  padding-left: 1rem;
+  margin-bottom: 2rem;
 }
 
-.App-link {
-  color: #61dafb;
-}
